src/objects/dwp_dace__Rule_Condition__c.object
<CustomObject>
    <description>Relationship between rules and conditions</description>
    <fields>
        <fullName>dwp_dace__condition_id__c</fullName> 
        <description>Relation with a condition</description>
        <inlineHelpText>Relation with a condition</inlineHelpText>
        <label>Condition Reference</label>
        <referenceTo>dwp_dace__Condition__c</referenceTo>
        <relationshipLabel>Rule Conditions</relationshipLabel>
        <relationshipName>Rule_Conditions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>dwp_dace__condition_link__c</fullName>
        <description>Unique identifier of the related condition</description>
        <formula>IF($User.UIThemeDisplayed=&quot;Theme4d&quot;,HYPERLINK( &quot;#/sObject/&quot; +  dwp_dace__condition_id__c  ,  dwp_dace__condition_id__r.dwp_dace__condition_unique_id__c  ,&quot;_top&quot; ),HYPERLINK(dwp_dace__condition_id__c  , dwp_dace__condition_id__r.dwp_dace__condition_unique_id__c,&quot;_top&quot; ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Unique identifier of the related condition</inlineHelpText>
        <label>Condition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dwp_dace__rule_condition_active_type__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked, the relationship between the rules and the conditions is considered as active</description>
        <inlineHelpText>If checked, the relationship between the rules and the conditions is considered as active</inlineHelpText>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dwp_dace__rule_id__c</fullName> 
        <description>Relation with a rule</description>
        <inlineHelpText>Relation with a rule</inlineHelpText>
        <label>Rule Reference</label>
        <referenceTo>dwp_dace__Rule__c</referenceTo>
        <relationshipLabel>Rule Conditions</relationshipLabel>
        <relationshipName>Rule_Conditions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>dwp_dace__rule_link__c</fullName>
        <description>Unique identifier of the related rule</description>
        <formula>IF($User.UIThemeDisplayed=&quot;Theme4d&quot;,HYPERLINK( &quot;#/sObject/&quot; +  dwp_dace__rule_id__c  ,  dwp_dace__rule_id__r.dwp_dace__rule_unique_id__c  ,&quot;_top&quot; ),HYPERLINK(dwp_dace__rule_id__c , dwp_dace__rule_id__r.dwp_dace__rule_unique_id__c,&quot;_top&quot; ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Unique identifier of the related rule</inlineHelpText>
        <label>Rule</label>
        <type>Text</type>
    </fields>
    <label>Rule Condition</label>
    <nameField>
        <displayFormat>RC-{0000000000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rule Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>